Cleaned up dialog footers and fixed spacing.

--- a/main/webapp/modules/core/styles/util/dialog.less
+++ b/main/webapp/modules/core/styles/util/dialog.less
@@ -82,7 +82,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .dialog-footer {
   font-size: 1.3em;
   display: flex;
-  column-gap: 5px;
+  column-gap: 0.3125em;
   justify-content: right;
   background: @dialog_footer;
   padding: @padding_loose;
